# scrum-master-agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.override.yml.example  docker-compose.yml  mcp_server.py  pyproject.toml  technical-statement-ibmer-watsonx-challenge.md  watsonx-scrummaster-agent-technical-proposal.html
.bob/: custom_modes.yaml  mcp.json
.bob/rules-agent/: AGENTS.md
.bob/rules-ask/: AGENTS.md
.bob/rules-mode-writer/: 1_mode_creation_workflow.xml
.bob/rules-plan/: AGENTS.md
fixtures/: burndown_data.json  ceremonies.json  events.json  github_projects.json  release_items.json  retro_survey.json  snapshots.json  sprint.json  standup_digests.json
prompts/: pre_standup_brief.txt  release_notes.txt  retro_draft.txt  standup_digest.txt
scripts/: run_mock.py
services/ingestion/: Dockerfile  main.py  pyproject.toml
services/ingestion/ingestion/: app.py  config.py  redis_stream.py  security.py
services/ingestion/ingestion/routers/: github.py
services/ingestion/tests/: test_webhooks.py
services/scheduler/: Dockerfile  main.py  pyproject.toml
services/scheduler/scheduler/: config.py  jobs.py
services/worker/: Dockerfile  main.py  pyproject.toml
services/worker/tests/: test_mock_mode.py  test_pipeline.py
services/worker/worker/: config.py  consumer.py  pipeline.py
solution-impact/: solution-impact.md
solution-statement/: solution-statement.md
tasks/: plan.md
