[project]
name = "scrumagent-ingestion"
version = "0.1.0"
description = "Webhook ingestion service — receives events and publishes to Redis Streams"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "redis[hiredis]>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "scrumagent-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",   # TestClient
]

[tool.hatch.build.targets.wheel]
packages = ["ingestion"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
