[project]
name = "scrumagent-scheduler"
version = "0.1.0"
description = "Cron-based trigger service — emits internal AgentEvents to Redis Streams"
requires-python = ">=3.11"
dependencies = [
    "redis[hiredis]>=5.0",
    "apscheduler>=3.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "scrumagent-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["scheduler"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
