[project]
name = "scrumagent-worker"
version = "0.1.0"
description = "Processing pipeline — runs event processors in sequence"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "mcp>=1.9",
    "scrumagent-shared",
    "scrumagent-processors",
    "scrumagent-watsonx-client",
    "scrumagent-context-store",
    "scrumagent-dispatcher",
]

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
